Adding rest for admin and admin panel on page

--- a/src/main/webapp/WEB-INF/views/main/main.html
+++ b/src/main/webapp/WEB-INF/views/main/main.html
@@ -137,6 +137,25 @@
                                 </svg>
                             </span>
                         </a>
+                        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')" class="button button-primary">
+                            <span>
+                                <span class="text">
+                                    Admin panel
+                                </span>
+                               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-adjustments-alt" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <rect x="4" y="8" width="4" height="4" />
+                                  <line x1="6" y1="4" x2="6" y2="8" />
+                                  <line x1="6" y1="12" x2="6" y2="20" />
+                                  <rect x="10" y="14" width="4" height="4" />
+                                  <line x1="12" y1="4" x2="12" y2="14" />
+                                  <line x1="12" y1="18" x2="12" y2="20" />
+                                  <rect x="16" y="5" width="4" height="4" />
+                                  <line x1="18" y1="4" x2="18" y2="5" />
+                                  <line x1="18" y1="9" x2="18" y2="20" />
+                                </svg>
+                            </span>
+                        </a>
                     </div>
                 </navbar>
             </div>
@@ -144,7 +163,10 @@
 <!--            Main-->
             <div class="row" style="margin-top: 5%">
                 <h4></h4>
-                <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+                <p>Bank system</p>
+                <p>Java assignment 3</p>
+                <p>Azamat Saiduly</p>
+                <p>SE-1909</p>
             </div>
         </div>
     </div>
