--- a/src/main/webapp/WEB-INF/views/main/admin_panel.html
+++ b/src/main/webapp/WEB-INF/views/main/admin_panel.html
@@ -7,7 +7,7 @@
       lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bank system</title>
+    <title>Admin panel</title>
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -25,21 +25,22 @@
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" th:href="@{/images/favicon.png}">
-
+    <link rel="icon" type="image/png" th:href="@{/static/images/favicon.png}">
+    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/main.js}"></script>
     <script defer src="https://kit.fontawesome.com/6726cbbd79.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-<!--            Navbar-->
-            <div class="row" style="margin-top: 20px;">
-                <navbar>
-                    <div class="five columns">
-                        <h1>Bank system</h1>
-                    </div>
-                    <div class="seven columns">
-                        <a href="/" class="button">
+<div class="container">
+    <div class="row">
+        <!--        Navbar-->
+        <div class="row" style="margin-top: 20px;">
+            <navbar>
+                <div class="five columns">
+                    <h1>Admin panel</h1>
+                </div>
+                <div class="seven columns">
+                    <a href="/" class="button">
                             <span>
                                 <span class="icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#353535" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -53,65 +54,8 @@
                                     Main page
                                 </span>
                             </span>
-                        </a>
-                        <a href="/online_payments" sec:authorize="isAuthenticated()" class="button">
-                        <span>
-                            <span class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-wallet" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#353535" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                    <path d="M17 8v-3a1 1 0 0 0 -1 -1h-10a2 2 0 0 0 0 4h12a1 1 0 0 1 1 1v3m0 4v3a1 1 0 0 1 -1 1h-12a2 2 0 0 1 -2 -2v-12" />
-                                    <path d="M20 12v4h-4a2 2 0 0 1 0 -4h4" />
-                                </svg>
-                            </span>
-                            <span class="text">
-                                Online payments
-                            </span>
-                        </span>
-                        </a>
-                        <a href="/money_operations" sec:authorize="isAuthenticated()" class="button">
-                        <span>
-                          <span class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cash" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#353535" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <rect x="7" y="9" width="14" height="10" rx="2" />
-                                <circle cx="14" cy="14" r="2" />
-                                <path d="M17 9v-2a2 2 0 0 0 -2 -2h-10a2 2 0 0 0 -2 2v6a2 2 0 0 0 2 2h2" />
-                            </svg>
-                          </span>
-                          <span class="text">
-                              Money operations
-                          </span>
-                        </span>
-                        </a>
-                        <a href="/auth/signin" sec:authorize="isAnonymous()" class="button">
-                            <span>
-                                <span class="text">
-                                    Sign in
-                                </span>
-                                <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-login" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                      <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2" />
-                                      <path d="M20 12h-13l3 -3m0 6l-3 -3" />
-                                    </svg>
-                                </span>
-                            </span>
-                        </a>
-                        <a href="/auth/signup" sec:authorize="isAnonymous()" class="button button-primary">
-                            <span>
-                                <span class="text">
-                                    Sign up
-                                </span>
-                                <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-login" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                      <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2" />
-                                      <path d="M20 12h-13l3 -3m0 6l-3 -3" />
-                                    </svg>
-                                </span>
-                            </span>
-                        </a>
-                        <a href="/profile" sec:authorize="isAuthenticated()" class="button button-primary">
+                    </a>
+                    <a href="/profile" sec:authorize="isAuthenticated()" class="button button-primary">
                             <span>
                                 <span class="icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -124,8 +68,8 @@
                                     Profile
                                 </span>
                             </span>
-                        </a>
-                        <a href="/logout" sec:authorize="isAuthenticated()" class="button button-primary">
+                    </a>
+                    <a href="/logout" sec:authorize="isAuthenticated()" class="button button-primary">
                             <span>
                                 <span class="text">
                                     Logout
@@ -136,8 +80,8 @@
                                   <path d="M7 12h14l-3 -3m0 6l3 -3" />
                                 </svg>
                             </span>
-                        </a>
-                        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')" class="button button-primary">
+                    </a>
+                    <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')" class="button button-primary">
                             <span>
                                 <span class="text">
                                     Admin panel
@@ -155,22 +99,105 @@
                                   <line x1="18" y1="9" x2="18" y2="20" />
                                 </svg>
                             </span>
-                        </a>
-                    </div>
-                </navbar>
-            </div>
+                    </a>
+                </div>
+            </navbar>
+        </div>
 
-<!--            Main-->
-            <div class="row" style="margin-top: 5%">
-                <h4></h4>
-                <p>Bank system</p>
-                <p>Java assignment 3</p>
-                <p>Azamat Saiduly</p>
-                <p>SE-1909</p>
-            </div>
+        <!--        Main-->
+        <div class="row" style="margin-top: 5%; line-height: 40px">
+            <h3 style="border-bottom: solid 1px gainsboro">Actions</h3>
+            <a class="button button-primary" id="user_list_button">
+                USER LIST
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <circle cx="9" cy="7" r="4" />
+                    <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+                    <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+                    <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
+                </svg>
+            </a>
+            <a class="button button-primary" id="card_list_button">
+                CARDS LIST
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <rect x="3" y="5" width="18" height="14" rx="3" />
+                    <line x1="3" y1="10" x2="21" y2="10" />
+                    <line x1="7" y1="15" x2="7.01" y2="15" />
+                    <line x1="11" y1="15" x2="13" y2="15" />
+                </svg>
+            </a>
+            <a class="button button-primary" id="operations_list_button">
+                OPERATIONS LIST
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-list-check" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M3.5 5.5l1.5 1.5l2.5 -2.5" />
+                    <path d="M3.5 11.5l1.5 1.5l2.5 -2.5" />
+                    <path d="M3.5 17.5l1.5 1.5l2.5 -2.5" />
+                    <line x1="11" y1="6" x2="20" y2="6" />
+                    <line x1="11" y1="12" x2="20" y2="12" />
+                    <line x1="11" y1="18" x2="20" y2="18" />
+                </svg>
+            </a>
+<!--            Users table-->
+            <table class="u-full-width" id="users_list">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Login</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                    <th>Role</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="user : ${users}">
+                    <td th:inline="text">#[[${user.getId()}]]</td>
+                    <td th:text="${user.getName()}"></td>
+                    <td th:text="${user.getLogin()}"></td>
+                    <td th:text="${user.getEmail()}"></td>
+                    <td th:text="${user.getPhone()}"></td>
+                    <td th:text="${user.getRole().getName()}"></td>
+                </tr>
+                </tbody>
+            </table>
+            <table class="u-full-width" id="cards_list">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>User ID</th>
+                    <th>Card Number</th>
+                    <th>Expired date</th>
+                    <th>CVV</th>
+                    <th>Card Type</th>
+                    <th>Balance</th>
+                </tr>
+                </thead>
+                <tbody id="cards_list_table_body">
+                </tbody>
+            </table>
+            <table class="u-full-width" id="operations_list">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>User ID</th>
+                    <th>Date</th>
+                    <th>Operation</th>
+                    <th>From Card</th>
+                    <th>Status</th>
+                    <th>Balance</th>
+                </tr>
+                </thead>
+                <tbody id="operations_list_table">
+                </tbody>
+            </table>
+
         </div>
     </div>
+</div>
+
+
 
 </body>
 </html>
-
